--- a/xpra/css/menu-skin.css
+++ b/xpra/css/menu-skin.css
@@ -127,3 +127,53 @@ SOFTWARE.
     ;
 }
 
+#window_preview {
+    display: none;
+    width: 65%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 80000;
+    background-color: rgba(0, 0, 0, 0.7);
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.5);
+    border-radius: 2px;
+    padding: 20px;
+}
+
+.slick-track {
+    display: flex !important;
+}
+
+.slick-slide {
+    margin: 7px;
+}
+
+.slick-current {
+    border-width: 3px;
+    box-shadow: 0px 0px 20px rgba(255, 255, 255, 65%);
+    border-radius: 2px;
+    border: rgba(255, 255, 255, 50%);
+    border-style: solid;
+
+}
+
+.window-preview-item-container {
+    display: inline-block;
+    height: 100%;
+}
+
+.window-preview-item-img {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+
+.window-preview-item-text {
+    color: #FFF;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-family: auto;
+    padding: 4px;
+}
